--- a/jiyinjc-website/index.html
+++ b/jiyinjc-website/index.html
@@ -70,10 +70,10 @@
     <div class="container">
         <div class="row">
             <div class="col-md-6 col-sm-6 text-center text-lg-left">
-                &copy; Copyright 
+                &copy; Copyright @2019
             </div>
             <div class="col-md-6 col-sm-6 text-center text-lg-right">    
-                <a target="_blank" href="https://www.wowthemes.net">Mediumish Theme</a> by WowThemes.net
+                <a target="_blank" href="#">Coming soon</a> 
             </div>
         </div>
     </div>
